[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/gui/button/wide/wide_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/main_menu/screens/settings_screen/tabs/language_tab/language_tab.gd" type="Script" id=2]

[node name="language_tab" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="english_button" parent="." instance=ExtResource( 1 )]
margin_left = 80.0
margin_top = 0.0
margin_right = 160.0
margin_bottom = 20.0
id = "en"

[node name="text" parent="english_button/center_container" index="0"]
margin_left = 16.0
margin_right = 64.0
text = "english(US)"

[node name="portuguese_button" parent="." instance=ExtResource( 1 )]
margin_left = 80.0
margin_top = 24.0
margin_right = 160.0
margin_bottom = 44.0
id = "pt"

[node name="text" parent="portuguese_button/center_container" index="0"]
margin_left = 9.0
margin_right = 71.0
text = "português(BR)"

[node name="french_button" parent="." instance=ExtResource( 1 )]
margin_left = 80.0
margin_top = 48.0
margin_right = 160.0
margin_bottom = 68.0
id = "fr"

[node name="text" parent="french_button/center_container" index="0"]
margin_left = 13.0
margin_right = 67.0
text = "français(FR)"

[node name="french_CA_button" parent="." instance=ExtResource( 1 )]
margin_left = 80.0
margin_top = 72.0
margin_right = 160.0
margin_bottom = 92.0
id = "fr_CA"

[node name="text" parent="french_CA_button/center_container" index="0"]
margin_left = 13.0
margin_right = 67.0
text = "français(CA)"

[connection signal="button_pressed" from="english_button" to="." method="_on_language_button_pressed"]
[connection signal="button_pressed" from="portuguese_button" to="." method="_on_language_button_pressed"]
[connection signal="button_pressed" from="french_button" to="." method="_on_language_button_pressed"]
[connection signal="button_pressed" from="french_CA_button" to="." method="_on_language_button_pressed"]

[editable path="english_button"]
[editable path="portuguese_button"]
[editable path="french_button"]
[editable path="french_CA_button"]
